fix: Shifted style attributes to seperate css file or to tailwind classes

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -497,3 +497,34 @@ body {
   cursor: pointer; 
   transition: background 0.2s;
 }
+
+.qr-code-input {
+  width: 72px; 
+  height: 56px; 
+  text-align: center; 
+  font-size: 24px; 
+  font-weight: 700; 
+  border-radius: 10px; 
+  border: 2px solid var(--color-ctp-mauve-950); 
+  background: var(--color-ctp-surface0); 
+  color: var(--color-ctp-mauve); 
+  outline: none;
+}
+
+#qr-go-btn {
+  width: 100%; 
+  max-width: 300px; 
+  padding: 14px; 
+  border-radius: 12px; 
+  background: var(--color-ctp-surface0); 
+  color: var(--color-ctp-mauve); 
+  font-weight: 700; 
+  font-size: 14px; 
+  border: 1px solid var(--color-ctp-mauve-950); 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  gap: 8px; 
+  cursor: pointer; 
+  transition: background 0.2s;
+}
